# garmin-data

./: .gitignore  README.md  athlete.example.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: devcontainer.json
src/garmin_runner/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/garmin_runner/dashboard/: __init__.py  analysis_runner.py  app.py  charts.py  components.py  config.py  data.py  exports.py  exports_ui.py  filters.py  formatting.py  i18n.py  layout.py  state.py  theme.py  upload.py  validation.py  visualizations.py
src/garmin_runner/dashboard/views/: activities.py  algorithms.py  attribution.py  blocks.py  (+10 more)
src/garmin_runner/features/: activity_features.py  daily_features.py
src/garmin_runner/fit/: __init__.py  filters.py  parser.py  schema.py
src/garmin_runner/models/: __init__.py  fitness_fatigue.py  ml.py  performance.py  performance_change.py  training_blocks.py  zones.py
src/garmin_runner/planning/: __init__.py  candidates.py  constraints.py  historical.py  optimizer.py  rules.py  schema.py  scoring.py  templates.py
src/garmin_runner/reporting/: markdown_report.py
src/garmin_runner/run_walk/: __init__.py  classifier.py  fatigue.py  metrics.py  segmenter.py
src/garmin_runner/utils/: io.py
tests/: test_config.py  test_deployment.py  test_expanded_fit_attributes.py  test_filtering.py  test_in_memory_pipeline.py  test_load_fatigue_adjustment.py  test_optimizer.py  test_performance_change.py  test_performance_predictions.py  test_planning.py  test_run_walk.py  test_v2_optimizer.py
tests/dashboard/: test_algorithms.py  test_charts.py  test_exports.py  test_upload.py  test_visualizations.py
