[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-runner"
version = "0.1.0"
description = "Deterministic Garmin FIT running analysis with run-walk support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fitparse>=1.2,<2",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3.1",
  "pyarrow>=16,<25",
  "PyYAML>=6,<7",
  "reportlab>=4.2,<5",
  "rich>=13,<16",
  "scikit-learn>=1.5,<2",
  "streamlit>=1.50,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
